refactor sonar issues