@@ -8,7 +8,6 @@ import com.inditest.infrastructure.repositories.PricesRepository;
 import java.time.Instant;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class PricesPersistenceAdapter implements PricesPersistencePort {
 
@@ -20,13 +19,13 @@ public class PricesPersistenceAdapter implements PricesPersistencePort {
 
     @Override
     public List<Prices> findByBrandIdAndProductIdAndDateRange(Long brandId, Long productId, Instant date) {
-        return pricesRepository.findByBrandIdAndProductIdAndDateRange(brandId, productId, date).stream().map(PricesMapper::toDto).collect(Collectors.toList());
+        return pricesRepository.findByBrandIdAndProductIdAndDateRange(brandId, productId, date).stream().map(PricesMapper::toDto).toList();
     }
 
     @Override
     public void saveAll(List<Prices> listPrices) {
         if (Objects.nonNull(listPrices)) {
-            pricesRepository.saveAll(listPrices.stream().map(PricesMapper::toEntity).collect(Collectors.toList()));
+            pricesRepository.saveAll(listPrices.stream().map(PricesMapper::toEntity).toList());
         }
     }
 
